--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
     <script src='sections.js'></script>
     <script src='chat.js'></script>
     <script src='buttons.js'></script>
+    <script src='sde_elements_constructor.js'></script>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div id='top-menu' class='top-menu'></div>
     <div id='cat-title'></div>
+    <div id='sde'></div>
     <div id='liveperson-persist-button'></div>
     <script>createMenu();</script>
+    <script>createSDESection();</script>
   </body>     
 </html>
 
