--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
   <body>
     <div id='top-menu' class='top-menu'></div>
     <div id='cat-title'></div>
-    <div id='sde'></div>
+    <div id='sde'>
+      <div id="popup-container-saved" class="popup-container">
+        <div id="pupop" class="popup popup-saved">✅ SAVED</div>
+      </div>
+      <div id="popup-container-copied" class="popup-container">
+        <div id="pupop" class="popup popup-copied">✅ COPIED</div>
+      </div>
+    </div>
     <div id='liveperson-persist-button'></div>
     <script>createMenu();</script>
     <script>createSDESection();</script>
