--- a/bot-auto-test/index.html
+++ b/bot-auto-test/index.html
@@ -30,7 +30,10 @@
                 </div>
                 <div class="table">
                   <div class="row">
-                    <div id="script-window-content" class="cell script-window-content"></div>
+                    <div id="script-content-cell" class="script-content-cell">
+                      <div id="script-window-content" class="script-window-content"></div>
+                    </div>
+                    
                     <div id="script-window-buttons-container" class="cell script-window-buttons-container">
                       <div id="script-window-buttons-command" class="script-window-buttons command"></div>
                       <div id="script-window-buttons-system" class="script-window-buttons system"></div>
