Text command, UI

--- a/bot-auto-test/index.html
+++ b/bot-auto-test/index.html
@@ -11,6 +11,7 @@
     <script src="js/config.js"></script>
     <script src="js/chat-window-connector.js"></script>
     <script src="js/chat-connection-menu.js"></script>
+    <script src="js/dev-tools.js"></script>
 
     <link rel="stylesheet" href="js/json-pollock/dist/json-pollock.min.css">
     <link rel="stylesheet" href="main.css">
