dblclick for copy

--- a/bot-auto-test/index.html
+++ b/bot-auto-test/index.html
@@ -9,6 +9,7 @@
     <script src="js/command-elements.js"></script>
     
     <script src="js/config.js"></script>
+    <script src="js/clipboard.js"></script>
     <script src="js/chat-window-connector.js"></script>
     <script src="js/chat-connection-menu.js"></script>
     <script src="js/dev-tools.js"></script>
