log attribute creation

--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
       // Create SDE inputs
       createSDEInputTable();
     </script>
-    <script>createSDESection();</script>
+    <!-- <script>createSDESection();</script> -->
   </body>     
 </html>
