--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <script src='chat.js'></script>
     <script src='categories.js'></script>
     <script src='buttons.js'></script>
