--- a/bot-auto-test/index.html
+++ b/bot-auto-test/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="js/messaging-window.min.js"></script>
+    <script src="js/liveperson/custom-messaging-window.js"></script>
     <script src="js/json-pollock/dist/json-pollock.min.js"></script>
     <script src="js/json-pollock/dist/json-pollock.global.min.js"></script>
     <script src="js/chat-elements.js"></script>
@@ -51,51 +51,6 @@
                   <div class="chat-header-cell left"></div>
                   <div class="chat-header-cell center">CHAT</div>
                   <div id="chat-header-rigth" class="chat-header-cell right">
-                    <!-- <div id="chat-progress-animation" class="dot-flashing"></div> -->
-                    <!-- <div class="main">
-                      <ul class="mainnav">
-                        <li class="hassubs"><a href="#">Connect</a>
-                          <ul class="dropdown">
-                              <li class="hassubs"><a href="#">Dev</a>
-                                  <ul class="dropdown">
-                                      <li class="subs hassubs"><a href="#">WEB</a>
-                                          <ul class="dropdown">
-                                              <li class="subs"><a href="#">Home page</a></li>
-                                              <li class="subs"><a href="#">Kitchen</a></li>
-                                              <li class="subs"><a href="#">Price match</a></li>
-                                          </ul>
-                                      </li>
-                                      <li class="subs hassubs"><a href="#">SMS</a>
-                                          <ul class="dropdown">
-                                              <li class="subs"><a href="#">Main</a></li>
-                                          </ul>
-                                      </li>
-                                  </ul>
-                              </li>
-                              <li class="hassubs"><a href="#">Stage</a>
-                                  <ul class="dropdown">
-                                      <li class="subs hassubs"><a href="#">WEB</a>
-                                          <ul class="dropdown">
-                                              <li class="subs"><a href="#">Home page</a></li>
-                                              <li class="subs"><a href="#">Kitchen</a></li>
-                                              <li class="subs"><a href="#">Price match</a></li>
-                                          </ul>
-                                      </li>
-                                      <li class="subs hassubs"><a href="#">SMS</a>
-                                          <ul class="dropdown">
-                                              <li class="subs"><a href="#">Main</a></li>
-                                          </ul>
-                                      </li>
-                                  </ul>
-                              </li>
-                          </ul>
-                        </ul>
-                      <br style="clear: both;">
-                    </div> -->
-
-                    <!-- <div id="chat-window-init-button" class="chat-window-init-button"> -->
-                      <!-- <img class="chat-ctrl-img" src="assets/svg/connect.svg"></img> -->
-                    <!-- </div> -->
                   </div>
                 </div>
                 <div id="chat-window-content" class="chat-window-content">
@@ -110,7 +65,6 @@
       window.onload = () => {
         buildCommands();
         buildSystemButtons();
-        // createMenu();
       }
     </script>
   </body>
