--- a/bot-auto-test/index.html
+++ b/bot-auto-test/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <script src="js/liveperson/custom-messaging-window.js"></script>
     <script src="js/json-pollock/dist/json-pollock.min.js"></script>
     <script src="js/json-pollock/dist/json-pollock.global.min.js"></script>
