--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src='chat.js'></script>
     <script src='categories.js'></script>
     <script src='buttons.js'></script>
+    <script src='utils.js'></script>
     <script src='sde_elements_constructor.js'></script>
     <link rel="stylesheet" href="styles.css">
   </head>
