--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div class="slidecontainer">
+      <label class="v-slider-label">H</label>
+      <input type="range" id="chat-window-height-slider" min="0" max="100" value="1" step="1"/>
+      <!-- <input type="range" orient="vertical" id="chat-window-height-slider" min="0" max="100" value="1" step="1"/> -->
+      
+      <!-- <input type="range" orient="vertical" id="chat-window-width-slider" min="0" max="100" value="1" step="1"/> -->
+      <label class="v-slider-label">W</label>
+      <input type="range" id="chat-window-width-slider" min="0" max="100" value="1" step="1"/>
+      
+    </div>
     <div id='top-title' class='top-title'></div>
     <div id='top-menu' class='top-menu'></div>
 
@@ -44,6 +54,7 @@
       createMenu();
       // Create SDE inputs
       createSDEInputTable();
+      initChatWindowSliders();
     </script>
     <!-- <script>createSDESection();</script> -->
   </body>     
